PostContent, commentContent and bio validation + database maxlength change, profile and user detail front, postgresql post query error

--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -171,7 +171,7 @@
                     <div *ngIf="extraForm.get('bio').invalid">
                         <small class="form-text text-danger"
                                *ngIf="extraForm.get('bio').errors.maxlength">
-                            Zbyt dużo znaków!
+                            Zbyt dużo znaków! max 2048
                         </small>
                     </div>
                 </div>
