--- a/src/main/webapp/app/profile/profile.component.html
+++ b/src/main/webapp/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="justify-content-center">
     <div class="container center">
         <div class="col-md-10 profile-window" *ngIf="user">
             <div class="row">
@@ -20,34 +20,38 @@
                 </div>
             </div>
             <br>
-            <dl class="row justify-content-center">
-                <div *ngIf="user.firstName || user.lastName" class="col-md-4 center">
-                    <div *ngIf="user.firstName">
-                        <dt><span jhiTranslate="userManagement.firstName">First Name</span></dt>
-                        <dd>{{user?.firstName}}</dd>
+            <dl>
+                <div class="row">
+                    <div *ngIf="user.firstName || user.lastName" class="col-md-5 center text-center">
+                        <div *ngIf="user.firstName">
+                            <dt><span jhiTranslate="userManagement.firstName">First Name</span></dt>
+                            <dd>{{user?.firstName}}</dd>
+                        </div>
+                        <div *ngIf="user.lastName">
+                            <dt><span jhiTranslate="userManagement.lastName">Last Name</span></dt>
+                            <dd>{{user?.lastName}}</dd>
+                        </div>
                     </div>
-                    <div *ngIf="user.lastName">
-                        <dt><span jhiTranslate="userManagement.lastName">Last Name</span></dt>
-                        <dd>{{user?.lastName}}</dd>
+                    <div class="col-md-5 center text-center">
+                        <dt><span jhiTranslate="userManagement.email">Email</span></dt>
+                        <dd><a href="mailto:{{user.email}}">{{user.email}}</a></dd>
+                        <div *ngIf="userExtra.userLocation">
+                            <dt><span jhiTranslate="soundgramApp.userExtra.userLocation">User Location</span></dt>
+                            <dd>
+                                <span>{{userExtra.userLocation}}</span>
+                            </dd>
+                        </div>
+                        <!--                    <dt><span jhiTranslate="userManagement.langKey">Lang Key</span></dt>
+                                            <dd>{{user?.langKey}}</dd>-->
                     </div>
                 </div>
-                <div class="col-md-4 center">
-                    <dt><span jhiTranslate="userManagement.email">Email</span></dt>
-                    <dd><a href="mailto:{{user.email}}">{{user.email}}</a></dd>
-                    <div *ngIf="userExtra.userLocation">
-                        <dt><span jhiTranslate="soundgramApp.userExtra.userLocation">User Location</span></dt>
+                <div class="row justify-content-center">
+                    <div *ngIf="userExtra.bio" class="col center text-center">
+                        <dt><span jhiTranslate="soundgramApp.userExtra.bio">Biography</span></dt>
                         <dd>
-                            <span>{{userExtra.userLocation}}</span>
+                            <span>{{userExtra.bio}}</span>
                         </dd>
                     </div>
-<!--                    <dt><span jhiTranslate="userManagement.langKey">Lang Key</span></dt>
-                    <dd>{{user?.langKey}}</dd>-->
-                </div>
-                <div *ngIf="userExtra.bio" class="col-md-4 center">
-                    <dt><span jhiTranslate="soundgramApp.userExtra.bio">Biography</span></dt>
-                    <dd>
-                        <span>{{userExtra.bio}}</span>
-                    </dd>
                 </div>
             </dl>
             <div class="row">
@@ -87,12 +91,12 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="btn-group-vertical btn-group">
-<!--                        <button type="submit"
-                                routerLink="/users"
-                                class="btn btn-info">
-                            <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span
-                            jhiTranslate="entity.action.back">Back</span>
-                        </button>-->
+                        <!--                        <button type="submit"
+                                                        routerLink="/users"
+                                                        class="btn btn-info">
+                                                    <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span
+                                                    jhiTranslate="entity.action.back">Back</span>
+                                                </button>-->
                         <button type="button" class="btn btn-info" (click)="previousState()">
                             <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span
                             jhiTranslate="entity.action.back">Back</span>
