audio slider color, production base-url

--- a/src/main/webapp/app/shared/postObject/post-player.component.scss
+++ b/src/main/webapp/app/shared/postObject/post-player.component.scss
@@ -30,7 +30,7 @@ input[type='range']::-webkit-slider-thumb {
   height: 20px;
   width: 26px;
   border-radius: 7px;
-  background: #65001c;
+  background: #522b72; // #65001c;
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -3.6px;
